tests/golden/create-db/cockroach-operator/cockroach-operator/10_kustomize/cockroach-operator/v1_namespace_syn-cockroach-operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    control-plane: cockroach-operator
  name: syn-cockroach-operator
